--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,7 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+          xcode-version: latest-stable
+
+    - name: Build
+      run: ./Scripts/create-xcframework.sh
+            
     - name: Build
       run: swift build -v
+      
     - name: Run tests
       run: swift test -v
